Trying various methods to extract text and tables from pdf files

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,39 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/technology.tabula/tabula -->
+		<dependency>
+		    <groupId>technology.tabula</groupId>
+		    <artifactId>tabula</artifactId>
+		    <version>1.0.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.3</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>3.0.0-alpha2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j -->
+		<dependency>
+			<groupId>net.sourceforge.tess4j</groupId>
+			<artifactId>tess4j</artifactId>
+			<version>5.7.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/clojure-interop/java.awt -->
+		<!-- For image preprocessing -->
+
+
+
+
 	</dependencies>
 
 	<build>
