--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
      </dependency>
 
 
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+    </dependency>
+
 	</dependencies>
 
 	<build>
