--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=password
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 #hibernate configuration/ jpa configuration
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #server configuration
 server.port=8080
