--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 #hibernate configuration/ jpa configuration
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+
 
 
 #server configuration
