--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 #database connection configuration 
 spring.datasource.url=jdbc:mysql://localhost:3306/sanolagani
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=mysql
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 
 #hibernate configuration/ jpa configuration
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 
 
 
