--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,21 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
+		
+		
+		<dependency>
+    <groupId>edu.stanford.nlp</groupId>
+    <artifactId>stanford-corenlp</artifactId>
+    <version>4.3.1</version>
+</dependency>
+
+<dependency>
+    <groupId>edu.stanford.nlp</groupId>
+    <artifactId>stanford-corenlp-models</artifactId>
+    <version>4.3.1</version>
+</dependency>
+
+
 
 	</dependencies>
 
