--- a/pom.xml
+++ b/pom.xml
@@ -122,20 +122,25 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
-		
-		
-		<dependency>
-    <groupId>edu.stanford.nlp</groupId>
-    <artifactId>stanford-corenlp</artifactId>
-    <version>4.3.1</version>
-</dependency>
+			
+ 
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-text</artifactId>
+        <version>1.9</version>
+    </dependency>
 
-<dependency>
-    <groupId>edu.stanford.nlp</groupId>
-    <artifactId>stanford-corenlp-models</artifactId>
-    <version>4.3.1</version>
+ <dependency>
+        <groupId>edu.stanford.nlp</groupId>
+        <artifactId>stanford-corenlp</artifactId>
+        <version>4.3.1</version>
+    </dependency>
+  <dependency>
+       <groupId>edu.stanford.nlp</groupId>
+       <artifactId>stanford-corenlp</artifactId>
+       <version>4.3.1</version>
+       <classifier>models</classifier>
 </dependency>
-
 
 
 	</dependencies>
