refactor and changes

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,14 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.giaybac</groupId>
+			<artifactId>traprange</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${pom.basedir}/src/lib/traprange.latest.jar</systemPath>
+		</dependency>
+
       <dependency>
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
