--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #database connection configuration 
 spring.datasource.url=jdbc:mysql://localhost:3306/sanolagani
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=mysql
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 #server configuration
-server.port=8080
+server.port=8088
 
 
 #email sending configuration
