--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,10 @@
 			<classifier>models</classifier>
 		</dependency>
 
-
+      <dependency>
+          <groupId>org.thymeleaf.extras</groupId>
+        <artifactId>thymeleaf-extras-java8time</artifactId>
+    </dependency>
 	</dependencies>
 
 	<build>
