--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #database connection configuration 
 spring.datasource.url=jdbc:mysql://localhost:3306/sanolagani
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=mysql
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
 
